<resources>

    <string name="app_name">Robodex</string>

    <string name="title_activity_main">@string/app_name</string>
    <string name="title_activity_list">@string/app_name</string>
    <string name="title_activity_detail">@string/app_name</string>
    <string name="title_activity_map">@string/app_name</string>

    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_about">About</string>

    <string name="specialty">Specialty</string>
    <string name="specialties">Specialties</string>
    <string name="specialists">Specialists</string>
    <string name="organization">Organization</string>
    <string name="organizations">Organizations</string>
    <string name="location">Location</string>
    <string name="locations">Locations</string>
    <string name="person">Person</string>
    <string name="people">People</string>
    <string name="near_me">Near Me</string>
    <string name="map_items">Map Items</string>
    <string name="links">Links</string>
    <string name="recent">Recent</string>
    <string name="pending_removals">Pending Removals</string>
    <string name="manage_roles">Manage Roles</string>
    <string name="search">Search</string>
    <string name="map">Map</string>
    <string name="about">About</string>
    <string name="checkin">Check-In</string>

    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="checkin_time">Last Check-In</string>
    <string name="notes">Notes</string>

    <string name="detail_person">Person Details</string>
    <string name="detail_location">Location Details</string>

    <string name="search_results">Search Results</string>
    <string name="search_hint_default">Search All</string>

    <string name="blank">(none)</string>

    <string name="content_description_expand_collapse">Expand/Collapse</string>

    <string name="error_invalid_list_type">Nothing to display</string>
    <string name="error_invalid_details_type">Nothing to display</string>


</resources>